[package]
name = "gui-sample"
version = "0.1.0"
authors = ["Esteban Borai <estebanborai@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.gtk]
version = "0.3.0"
features = ["v3_16"]

[dependencies]
rand = "0.3"
gio = "0.3.0"